# takt-benchmark

./: Cargo.toml  NOTICE  README.md
crates/riedspied-cli/: Cargo.toml
crates/riedspied-cli/src/: main.rs  output.rs
crates/riedspied-cli/src/commands/: bench.rs
crates/riedspied-core/: Cargo.toml
crates/riedspied-core/src/: export.rs  lib.rs
crates/riedspied-core/src/bench/: mod.rs  sustained.rs
crates/riedspied-core/src/device/: linux.rs  macos.rs  mod.rs
crates/riedspied-core/src/history/: mod.rs
crates/riedspied-gui/: Cargo.toml
crates/riedspied-gui/src/: app.rs  main.rs
crates/riedspied-gui/src/views/: benchmark.rs  comparison.rs  detail.rs  history.rs  mod.rs
crates/takt-cli/: Cargo.toml
crates/takt-cli/src/: main.rs  output.rs
crates/takt-cli/src/commands/: bench.rs
crates/takt-core/: Cargo.toml
crates/takt-core/src/: export.rs  lib.rs
crates/takt-core/src/bench/: mod.rs  random.rs  sequential.rs
crates/takt-core/src/history/: mod.rs
crates/takt-gui/: Cargo.toml
crates/takt-gui/src/: app.rs  main.rs  palette.rs
crates/takt-gui/src/views/: benchmark.rs  comparison.rs  detail.rs  history.rs  mod.rs
docs/: architecture.md  benchmark-methodology.md  platform-notes.md
