[workspace]
members = [
    "crates/riedspied-core",
    "crates/riedspied-cli",
    "crates/riedspied-gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.50", features = ["derive"] }
directories = "6.0.0"
eframe = "0.34.1"
egui = "0.34.1"
egui_plot = "0.35.0"
indicatif = "0.18.4"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
