[package]
name = "riedspied-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
html-escape.workspace = true
plotters.workspace = true
rand = { workspace = true, features = ["small_rng"] }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
