[package]
name = "riedspied-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
directories.workspace = true
eframe.workspace = true
egui.workspace = true
egui_plot.workspace = true
rfd.workspace = true
riedspied-core = { path = "../riedspied-core" }
